--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.css';
+
+.pointer {
+    cursor: pointer;
+}
+.pointer:hover{ 
+    color: rgb(83, 83, 223);
+}
+.cursor-default {
+    cursor: default;
+}
